<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>loone</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mechatronicsclub@humber.ca">humberasv</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>threading</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>time</exec_depend>
  <exec_depend>math</exec_depend>
  <exec_depend>socket</exec_depend>
  <exec_depend>subprocess</exec_depend>
  <exec_depend>busio</exec_depend>
  <exec_depend>board</exec_depend>
  <exec_depend>adafruit_pca9685</exec_depend>
  <exec_depend>adafruit_motor</exec_depend>
  <exec_depend>Jetson.GPIO</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
