<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>loone</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mechatronicsclub@humber.ca">humberasv</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>navigation2</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <!-- nav2 + ros2_control chain (see bringup.launch.py) -->
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>topic_based_ros2_control</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>nav2_regulated_pure_pursuit_controller</exec_depend>
  <exec_depend>threading</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>time</exec_depend>
  <exec_depend>math</exec_depend>
  <exec_depend>socket</exec_depend>
  <exec_depend>subprocess</exec_depend>
  <exec_depend>busio</exec_depend>
  <exec_depend>board</exec_depend>
  <exec_depend>adafruit_pca9685</exec_depend>
  <exec_depend>adafruit_motor</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
  <exec_depend>turtlebot3_navigation2</exec_depend>
  <exec_depend>zed_msgs</exec_depend>
  <exec_depend>zed_wrapper</exec_depend>
  <exec_depend>depthimage_to_laserscan</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
